# motur

./: .renovaterc.json5  Dockerfile  config.yaml  flake.nix  pyproject.toml
.github/: labeler.yaml  labels.yaml
.github/workflows/: ci.yaml  label-sync.yaml  labeler.yaml  release.yaml
scripts/: generate-api-clients.sh
src/: anpr_service.py  config.py  error_details.py  main.py  mot_api_service.py  mot_service.py  scraper.py  scraper_service.py  settings.py  vehicle_service.py  ves_api_service.py
tests/: test_mot_api_service.py  test_true.py  test_ves_api_service.py
tests/data/invalid_data/: missing_reg.avif  missing_reg2.avif
