[project]
name = "motur"
version = "0.1.0"
description = "A fastapi project to fetch vehicle information and MOT history using ANPR on images if required"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
  "fast-alpr[onnx]==0.3.0",
  "fastapi[standard]==0.120.4",
  "pydantic==2.12.3",
  "pydantic-settings==2.11.0",
  "pydoll-python==2.10.0",
  "validators>=0.35.0",
]
[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  "src"
]
[tool.uv]
# renovate: datasource=pypi depName=uv
required-version = "==0.9.5"

[tool.pyright]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-mock>=3.14.1",
]
